<package format="2">
  <name>directed_layer</name>
  <version>1.0.0</version>
  <description>
    Directed layer for use with directed planners.
  </description>

  <maintainer email="banfi.igor@windowslive.com">Igor Banfi</maintainer>
  <license>BSD</license>
  <author email="banfi.igor@windowslive.com">Igor Banfi</author>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>costmap_2d</depend>
    <depend>directed_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <test_depend>roslint</test_depend>

    <export>
      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
    </export>
  </package>
