<package>
  <name>directed_msgs</name>
  <version>1.0.0</version>
  <description>
    directed_msgs defines the common messages used to interact with the
    directed planners and layers.
  </description>

  <maintainer email="banfi.igor@windowslive.com">Igor Banfi</maintainer>
  <license>BSD</license>
  <author email="banfi.igor@windowslive.com">Igor Banfi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
