<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>trajectory_directed_local_planner</name>
    <version>1.0.0</version>
    <description>

        Implementation of several directed local planners.

    </description>
    <maintainer email="banfi.igor@windowslive.com">Igor Banfi</maintainer>
    <license>BSD</license>
    <author email="banfi.igor@windowslive.com">Igor Banfi</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>angles</build_depend>
    <build_depend>cmake_modules</build_depend>

    <depend>base_local_planner</depend>
    <depend>costmap_2d</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>eigen</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>sensor_msgs</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>directed_msgs</depend>
    <depend>directed_layer</depend>
    <depend>dwa_local_planner</depend>

    <export>
        <nav_core plugin="${prefix}/blp_plugin.xml" />
    </export>

</package>
